6-ec2-with-user_data.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: "Create EC2 with user data"

Parameters:
  InstanceTypeParameter:
    Description: Select instance type
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t2.small
      - t2.large
    Description: Available options are t2.micro, t2.small, t2.large. Default is t2.micro
  PublicKey:
    Description: Input public key
    Type: String
    NoEcho: true

Resources:
  MyInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceTypeParameter
      ImageId: ami-06878d265978313ca
      UserData:
        Fn::Base64:
          !Sub
            - |
              #!/bin/bash
              apt-get update -y
              apt-get install apache2 -y
              mkdir /home/ubuntu/${DirName}
            - {DirName: !Join ['-', [!Ref AWS::StackName, !Ref AWS::Region, 'app' ] ] }
      SecurityGroups:
        - !Ref SSHSecurityGroup
        - !Ref ServerSecurityGroup
      KeyName: 
        Ref: ImportedKeyPair

  # Run `ssh-keygen` to generate key pair
  ImportedKeyPair:
    Type: AWS::EC2::KeyPair
    Properties:
      KeyName: NameForMyImportedKeyPair
      PublicKeyMaterial: !Ref PublicKey

  # an elastic IP for our instance
  MyEIP:
    Type: AWS::EC2::EIP
    Properties:
      InstanceId: !Ref MyInstance

  # our EC2 security group
  SSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        FromPort: 22
        IpProtocol: tcp
        ToPort: 22

  # our second EC2 security group
  ServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable secure access via http
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: 192.168.1.1/32
